ISDB-115: Added tasks and dependencies Added configuration for lombok