@@ -1,3 +1,21 @@
+buildscript {
+  repositories {
+    mavenLocal()
+    mavenCentral()
+    maven {
+      url "https://jitpack.io"
+      content {
+        excludeGroup "com.github.ben-manes.versions"
+      }
+    }
+
+  }
+  dependencies {
+    classpath "net.serenity-bdd:serenity-gradle-plugin:2.4.34"
+    classpath group: 'cz.habarta.typescript-generator', name: 'typescript-generator-gradle-plugin', version: '2.35.1025'
+  }
+}
+
 plugins {
   id 'application'
   id 'checkstyle'
@@ -6,12 +24,26 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.6.5'
   id 'org.owasp.dependencycheck' version '6.5.3'
-  id 'com.github.ben-manes.versions' version '0.42.0'
+  id 'com.github.ben-manes.versions' version '0.38.0'
   id 'org.sonarqube' version '3.3'
+  id 'idea'
+  //id 'com.github.hmcts.rse-cft-lib' version '0.14.2'
+  id 'hmcts.ccd.sdk' version '0.25.16'
+  id 'au.com.dius.pact' version '4.3.5'
 }
+
+apply plugin: 'cz.habarta.typescript-generator'
+apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'net.serenity-bdd.aggregator'
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
+
+ccd {
+  configDir = file('ccd-definitions/definitions')
+}
+
+ext['elasticsearch.version'] = '7.17.0'
 
 java {
   toolchain {
@@ -48,15 +80,23 @@ sourceSets {
   }
 }
 
+idea {
+  module {
+    testSourceDirs += file('src/integrationTest/java')
+    testSourceDirs += file('src/functionalTest/java')
+  }
+}
+
 configurations {
   functionalTestImplementation.extendsFrom testImplementation
-  functionalTestRuntimeOnly.extendsFrom runtimeOnly
+  functionalTestRuntimeOnly.extendsFrom testRuntime
 
   integrationTestImplementation.extendsFrom testImplementation
-  integrationTestRuntimeOnly.extendsFrom runtimeOnly
+  integrationTestRuntimeOnly.extendsFrom testRuntime
 
   smokeTestImplementation.extendsFrom testImplementation
-  smokeTestRuntimeOnly.extendsFrom runtimeOnly
+  smokeTestRuntimeOnly.extendsFrom testRuntime
+  smokeTestCompile.extendsFrom testCompile
 }
 
 tasks.withType(JavaCompile) {
@@ -78,6 +118,7 @@ tasks.withType(Test) {
 
 test {
   failFast = true
+  useJUnitPlatform()
 }
 
 task functional(type: Test) {
@@ -85,6 +126,7 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  finalizedBy(aggregate)
 }
 
 task integration(type: Test) {
@@ -97,8 +139,32 @@ task integration(type: Test) {
 
 task smoke(type: Test) {
   description = "Runs Smoke Tests"
+  setTestClassesDirs(sourceSets.functionalTest.output.classesDirs)
+  setClasspath(sourceSets.functionalTest.runtimeClasspath)
+  include "uk/gov/hmcts/reform/cosapi/smoke/**"
+}
+
+task highLevelDataSetup(type: JavaExec) {
+  if (System.getenv("ENVIRONMENT") != "prod") {
+    mainClass.set("uk.gov.hmcts.reform.cosapi.common.ccd.HighLevelDataSetupApp")
+    classpath += sourceSets.main.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  } else {
+    println("high level data setup is disabled in prod temporarily")
+  }
+}
+
+task contract(type: Test, description: 'Runs the pact contract tests.', group: 'Verification') {
+  description = "Runs the consumer Pact tests"
+  useJUnitPlatform()
   testClassesDirs = sourceSets.smokeTest.output.classesDirs
   classpath = sourceSets.smokeTest.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -113,7 +179,7 @@ pmd {
   reportsDir = file("$project.buildDir/reports/pmd")
   // https://github.com/pmd/pmd/issues/876
   ruleSets = []
-  ruleSetFiles = files("config/pmd/ruleset.xml")
+  ruleSetFiles = files("${rootDir}/config/pmd/ruleset.xml")
 }
 
 jacocoTestReport {
@@ -125,16 +191,70 @@ jacocoTestReport {
   }
 }
 
+jacoco {
+  toolVersion = "0.8.5"
+}
+
+jacocoTestCoverageVerification {
+  violationRules {
+    rule {
+      limit {
+        counter = 'LINE'
+        value = 'COVEREDRATIO'
+        minimum = 0.0
+      }
+    }
+  }
+}
+
 project.tasks['sonarqube'].dependsOn jacocoTestReport
 project.tasks['check'].dependsOn integration
 
+def sonarExclusions = [
+  '**/uk/gov/hmcts/reform/adoption/common/ccd/**',
+  '**/uk/gov/hmcts/reform/adoption/common/service/**',
+  '**/uk/gov/hmcts/reform/adoption/Application.java',
+  '**/uk/gov/hmcts/reform/adoption/common/config/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/caseworker/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/event/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/model/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/search/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/service/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/tab/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/task/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/workbasket/**',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/Adoption.java',
+  '**/uk/gov/hmcts/reform/adoption/payment/**',
+  '**/uk/gov/hmcts/reform/adoption/controllers/**',
+  '**/uk/gov/hmcts/reform/adoption/idam/**',
+  '**/uk/gov/hmcts/reform/adoption/common/AddSystemUpdateRole.java',
+  '**/uk/gov/hmcts/reform/adoption/common/notification/**',
+  '**/uk/gov/hmcts/reform/adoption/document/content/**',
+  '**/uk/gov/hmcts/reform/adoption/document/DocumentConstants.java',
+  '**/uk/gov/hmcts/reform/adoption/document/DocumentInfo.java',
+  '**/uk/gov/hmcts/reform/adoption/document/DocumentType.java',
+  '**/uk/gov/hmcts/reform/adoption/notification/FormatUtil.java',
+  '**/uk/gov/hmcts/reform/adoption/notification/CommonContent.java',
+  '**/uk/gov/hmcts/reform/adoption/notification/ApplicantNotification.java',
+  '**/uk/gov/hmcts/reform/adoption/notification/NotificationDispatcher.java',
+  '**/uk/gov/hmcts/reform/adoption/common/service/task/SetStateAfterSubmission.java',
+  '**/uk/gov/hmcts/reform/adoption/exception/**',
+  '**/uk/gov/hmcts/reform/adoption/document/BulkPrintService.java',
+  '**/uk/gov/hmcts/reform/adoption/adoptioncase/validation/ApplicationValidation.java',
+  '**/uk/gov/hmcts/reform/adoption/config/SwaggerConfiguration.java'
+
+]
+
 sonarqube {
   properties {
-    property "sonar.projectName", "fis :: fis-cos-api"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:fis-cos-api"
+    property "sonar.projectName", "Adoption :: adoption-cos-api"
+    property "sonar.projectKey", "uk.gov.hmcts.reform:adoption-cos-api"
+    property "sonar.exclusions", sonarExclusions.join(', ')
+    property "sonar.coverage.exclusions", sonarExclusions.join(', ')
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
   }
 }
+
 
 // before committing a change, make sure task still works
 dependencyUpdates {
@@ -145,6 +265,16 @@ dependencyUpdates {
   }
   rejectVersionIf { selection -> // <---- notice how the closure argument is named
     return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
+  }
+}
+
+dependencyManagement {
+  dependencies {
+    dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'
+    // CVE-2018-10237 - Unbounded memory allocation
+    dependencySet(group: 'com.google.guava', version: '31.1-jre') {
+      entry 'guava'
+    }
   }
 }
 
@@ -187,8 +317,27 @@ def versions = [
   springCloudStarterBootstrap : '3.1.1',
   springdocOpenApiUI: '1.6.6',
   comGithubHmctsJavaLogging: '6.0.1',
-  jacksonDatabind: '2.13.2.1',
+  jackson: '2.12.4',
   jacksonBom: '2.13.2.20220324',
+  reformsJavaLogging: '5.1.7',
+  lombok            : '1.18.20',
+  junit             : '5.8.1',
+  junitPlatform     : '1.8.2',
+  awaitility        : '1.7.0',
+  springBoot        : springBoot.class.package.implementationVersion,
+  pact              : '4.1.7',
+  serenityCoreVersion: '3.0.2',
+  ccdCaseDocumentAmClient      : '1.7.3'
+]
+
+ext.libraries = [
+  junit5: [
+    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
+    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
+    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
+    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
+  ]
 ]
 
 dependencies {
@@ -196,26 +345,94 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
+  implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.2-RELEASE'
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformsJavaLogging
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformsJavaLogging
+  implementation group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: versions.reformsJavaLogging
+  implementation group: 'com.github.hmcts', name:'ccd-case-document-am-client', version: versions.ccdCaseDocumentAmClient
+  //implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'
+  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.6'
   implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springdocOpenApiUI
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.comGithubHmctsJavaLogging
 
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jacksonDatabind
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
   implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.jacksonBom, ext: 'pom'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
-
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.45'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: versions.springCloudStarterBootstrap
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.s2sClient
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.10'
+  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.0'
+  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.2-Categories'
+  implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.2'
+  implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.16'
 
+  implementation 'org.projectlombok:lombok:1.18.18'
+  compileOnly "org.projectlombok:lombok:1.18.18"
+  annotationProcessor "org.projectlombok:lombok:1.18.18"
+
+  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+  testImplementation libraries.junit5
   testImplementation(platform('org.junit:junit-bom:5.8.2'))
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
+
+  testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
+    exclude(module: 'commons-logging')
+    exclude(module: 'android-json')
+  }
+
+  testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
+    exclude(module: 'commons-logging')
+    exclude(module: 'android-json')
+  }
+
+  testImplementation group: 'io.rest-assured', name: 'rest-assured'
+
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
+  testImplementation group: 'org.assertj', name: 'assertj-guava', version: '3.4.0'
+  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.1'
+
+  testImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+  testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.3.1'
+
+  testImplementation group: 'com.jayway.awaitility', name: 'awaitility', version: versions.awaitility
+  testImplementation group: 'com.github.stefanbirkner', name: 'system-lambda', version: '1.2.0'
+  testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '11.7'
+
+  testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
+  functionalTestImplementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
+  functionalTestImplementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.s2sClient
+
+  smokeTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact
+  smokeTestCompile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact
+  smokeTestCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
+
+  smokeTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact
+  smokeTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact
+  smokeTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+
 }
 
 mainClassName = 'uk.gov.hmcts.reform.cosapi.Application'
